--- a/face_jade_client/src/uni.scss
+++ b/face_jade_client/src/uni.scss
@@ -12,6 +12,8 @@
  * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
  */
 
+@import 'uview-ui/theme.scss';
+
 /* 颜色变量 */
 
 /* 行为相关颜色 */
@@ -74,3 +76,5 @@ $uni-color-subtitle: #555; // 二级标题颜色
 $uni-font-size-subtitle: 18px;
 $uni-color-paragraph: #3f536e; // 文章段落颜色
 $uni-font-size-paragraph: 15px;
+
+
